--- a/examples/HelloServer/Cargo.toml
+++ b/examples/HelloServer/Cargo.toml
@@ -7,3 +7,8 @@ version = "0.1.0"
 
 [dependencies]
 someip = {path = "../../"}
+bincode = "1.3"
+byteorder = "1.3.0"
+serde = { version = "1.0", features = ["derive"] }
+bytes = "1.0.1"
+
