--- a/examples/HelloServer/Cargo.toml
+++ b/examples/HelloServer/Cargo.toml
@@ -11,4 +11,11 @@ bincode = "1.3"
 byteorder = "1.3.0"
 serde = { version = "1.0", features = ["derive"] }
 bytes = "1.0.1"
+generator_macros = {path = "../../generator_macros"}
 
+
+
+
+
+[lib]
+proc-macro = true
