--- a/generator_macros/Cargo.toml
+++ b/generator_macros/Cargo.toml
@@ -6,6 +6,10 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+derive-syn-parse = "0.1.5"
+proc-macro2 = "1.0.27"
+quote = "1.0"
+syn = {version = "1.0", features = ["full"]}
 
 [lib]
 proc-macro = true
