--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ async-trait = "0.1.31"
 futures = "0.3.15"
 log = "0.4.14"
 pretty_env_logger = "0.4.0"
+serde = {version = "1.0", features = ["derive"]}
 tokio-util = {version = "0.6.5", features = ["codec", "net"]}
 
 [dev-dependencies]
