--- a/examples/HelloServer/Cargo.toml
+++ b/examples/HelloServer/Cargo.toml
@@ -12,8 +12,10 @@ byteorder = "1.3.0"
 serde = { version = "1.0", features = ["derive"] }
 bytes = "1.0.1"
 generator_macros = {path = "../../generator_macros"}
-
-
+thiserror = "1.0.25"
+tokio = {version = "1.4.0", features = ["full"]}
+async-trait = "0.1.31"
+futures = "0.3.15"
 
 
 
