--- a/examples/HelloServer/Cargo.toml
+++ b/examples/HelloServer/Cargo.toml
@@ -16,6 +16,9 @@ thiserror = "1.0.25"
 tokio = {version = "1.4.0", features = ["full"]}
 async-trait = "0.1.31"
 futures = "0.3.15"
+simplelog = "0.10.0"
+log = "0.4.14"
+
 
 
 
