--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,14 @@ thiserror = "1.0.24"
 tokio = {version = "1.4.0", features = ["full"]}
 # Using this to make the tokio codec
 async-trait = "0.1.31"
-futures = "0.3.15"
+bitvec = "0.22"
+futures = "0.3"
 log = "0.4.14"
 pretty_env_logger = "0.4.0"
 serde = {version = "1.0", features = ["derive"]}
 tokio-util = {version = "0.6.5", features = ["codec", "net"]}
-
 [dev-dependencies]
+async-std = "1.9.0"
+bincode = "1.3"
+generator_macros = {path = "generator_macros"}
 simplelog = "0.10.0"
