--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,11 @@
 {
-    "editor.formatOnSave": true,
-    "editor.rulers": [
-      100
-    ],
-    //"rust-analyzer.cargo.target": "aarch64-unknown-none-softfloat",
-    //"rust-analyzer.cargo.features": [
-    //  "bsp_qemu_virt"
-    //]
-  }
+  "editor.formatOnSave": true,
+  "editor.rulers": [
+    100
+  ],
+  "rust-analyzer.checkOnSave.command": "clippy"
+  //"rust-analyzer.cargo.target": "aarch64-unknown-none-softfloat",
+  //"rust-analyzer.cargo.features": [
+  //  "bsp_qemu_virt"
+  //]
+}
