--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,13 @@ tokio = {version = "1.4.0", features = ["full"]}
 # Using this to make the tokio codec
 async-trait = "0.1.31"
 bitvec = "0.22"
+byteorder = "1.4.3"
 futures = "0.3"
 log = "0.4.14"
 pretty_env_logger = "0.4.0"
 serde = {version = "1.0", features = ["derive"]}
 tokio-util = {version = "0.6.5", features = ["codec", "net"]}
+
 [dev-dependencies]
 async-std = "1.9.0"
 bincode = "1.3"
