--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ byteorder = "1.4.3"
 futures = "0.3"
 log = "0.4.14"
 pretty_env_logger = "0.4.0"
+rand = "0.8.4"
 serde = {version = "1.0", features = ["derive"]}
 tokio-util = {version = "0.6.5", features = ["codec", "net"]}
 
