--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ log = "0.4.14"
 pretty_env_logger = "0.4.0"
 rand = "0.8.4"
 serde = {version = "1.0", features = ["derive"]}
-tokio-util = {version = "0.6.5", features = ["codec", "net"]}
+tokio-util = {version = "0.6.5", features = ["codec", "net", "time"]}
 
 [dev-dependencies]
 async-std = "1.9.0"
