--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ tokio-util = {version = "0.6.5", features = ["codec", "net", "time"]}
 
 [dev-dependencies]
 async-std = "1.9.0"
+async-trait = "0.1.51"
 bincode = "1.3"
 generator_macros = {path = "generator_macros"}
 simplelog = "0.10.0"
