--- a/generator_macros/Cargo.toml
+++ b/generator_macros/Cargo.toml
@@ -1,4 +1,6 @@
 [package]
+authors = ["Sojan James <sojan.james@gmail.com>"]
+description = "SOME/IP derive macros for traits"
 edition = "2018"
 name = "someip_derive"
 version = "0.1.0"
