Added Apache license for someip_derive

--- a/generator_macros/Cargo.toml
+++ b/generator_macros/Cargo.toml
@@ -2,6 +2,7 @@
 authors = ["Sojan James <sojan.james@gmail.com>"]
 description = "SOME/IP derive macros for traits"
 edition = "2018"
+license-file = "LICENSE"
 name = "someip_derive"
 version = "0.1.0"
 
